--- a/templates/newupload2.html
+++ b/templates/newupload2.html
@@ -39,6 +39,7 @@ margin-right : auto;
 
 
 
+
 </style>
 </head>
 
@@ -52,6 +53,8 @@ margin-right : auto;
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
+
+<section id="section07" class="demo">
 <div class="bgded overlay" style="background-image:url('static/images/demo/backgrounds/hash1.jpg');">
   <div id="pageintro" class="hoc clear"> 
     <!-- ################################################################################################ -->
@@ -64,6 +67,8 @@ margin-right : auto;
     <!-- ################################################################################################ -->
   </div>
 </div>
+
+</section>
 
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
