--- a/templates/analy.html
+++ b/templates/analy.html
@@ -9,19 +9,378 @@
 
         </form>
 
-        <!-- {% for p in catego %}
-            
-            
-                {% for h in p %}
+    
+        {% for names in urllll %}
 
-                    
-                        {{ "result:"+h+"\n" }}
-                    
-                {% endfor %}
-                      
-        
-        {% endfor %} -->
 
-        <img src="{{urllll}}">
+  <img src="{{names}}" alt>
+
+  
+
+{% endfor %}
+
 
     </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!DOCTYPE html>
+<!--
+Template Name: Chillaid
+Author: <a href="https://www.os-templates.com/">OS Templates</a>
+Author URI: https://www.os-templates.com/
+Copyright: OS-Templates.com
+Licence: Free to use under our free template licence terms
+Licence URI: https://www.os-templates.com/template-terms
+-->
+<html lang="">
+<!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
+<head>
+<title>Fledge</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+</head>
+<body id="top">
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+{% extends "template.html" %}
+    {% block content %}
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<div class="bgded overlay" style="background-image:url('static/images/demo/backgrounds/t7.png');">
+  <div id="pageintro" class="hoc clear">
+    <!-- ################################################################################################ -->
+    <article>
+      <h3 class="heading">Text Classification</h3>
+      <p></p>
+     
+    </article>
+    <!-- ################################################################################################ -->
+  </div>
+</div>
+
+<!-- ################################################################################################ -->
+<div class="wrapper row2">
+  <section id="ctdetails" class="hoc container clear">
+    <!-- ################################################################################################ -->
+    <div class="sectiontitle">
+    <h1><strong>Tweets</strong> Analysis</h1>
+                           
+                                <p>
+                                    Search for your favorite topic in twitter, using <strong>Sentiment</strong> filter!
+                                </p>
+                                <br><br><br>
+      <h3>What tweets you want to see!</h3>
+                                    <p>Use the sentiment and factual filters below </p>
+    </div>
+
+    <div class="form-group">
+
+    <input type="text" name="tweet_search" placeholder="What do you want to search about.." class="form-username form-control" id="form-username">
+
+    </div>
+                                   
+    <br><br><br><br><br><br><br><br><br>
+   
+      <section id="introblocks">
+        <form role="form" id="form" class="login-form">
+      <ul class="nospace group btmspace-80 elements elements-four">
+
+
+        <li class="one_quarter">
+          <button type="submit" id="search_btn" value="Search Buton" style="width:200px">Search Buton</button>
+        </li>
+
+        
+
+        <li class="one_quarter">
+          <div class="search_tweets">
+          <button type="submit" value="All tweets" style="width:200px">All tweets</button>
+        </div>
+        </li>
+
+
+
+
+
+        <li class="one_quarter">
+          <button type="submit" id="psenti" value="+ve tweet" style="width:200px">+ve tweet</button>
+      </li>
+
+
+
+
+
+        <li class="one_quarter">
+          <button type="submit" id="nsenti" value="-ve tweet" style="width:200px">-ve tweet</button>
+           
+        </li>
+
+
+
+
+
+       
+      </ul>
+    </section>
+   
+   
+     <br><br><br><br>
+   
+      <section id="introblocks">
+      <ul class="nospace group btmspace-80 elements elements-four">
+        <li class="one_quarter">
+          <button type="submit" value="opinion tweet" style="width:200px">opinion tweet</button>
+        </li>
+        <li class="one_quarter">
+          <button type="submit" value="factual tweet" style="width:200px">factual tweet</button>
+           
+        </li>
+        <li class="one_quarter">
+          <button type="submit" value="image 1" style="width:200px">1 image</button>
+           
+        </li>
+        <li class="one_quarter">
+          <button type="submit" value="image 2" style="width:200px">2 image</button>
+           
+        </li>
+       
+      </ul>
+    </section>
+   
+  </form>
+     <br><br><br><br>
+   
+   
+   ......................... CODE HERE..................
+   
+   
+   
+   
+   
+    <!-- ################################################################################################ -->
+  </section>
+</div>
+
+
+
+
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<div class="bgded overlay row4" style="background-image:url('images/demo/backgrounds/lp.jpg');">
+  <footer id="footer" class="hoc clear">
+    <!-- ################################################################################################ -->
+    <div class="one_third first">
+      <h1 class="logoname"><a href="index.html">Fledge</h1>
+      <p>It aims to automate hashtag generation for any potential twitter handle and provide them with appropriate hashtags, eliminating the need to contemplate about inputting tags every time they Tweet.</p>
+       <a href="#"></a></p>
+      <ul class="faico clear">
+        <li><a class="faicon-facebook" href="#"><i class="fab fa-facebook"></i></a></li>
+        <li><a class="faicon-google-plus" href="#"><i class="fab fa-google-plus-g"></i></a></li>
+        <li><a class="faicon-linkedin" href="#"><i class="fab fa-linkedin"></i></a></li>
+        <li><a class="faicon-twitter" href="#"><i class="fab fa-twitter"></i></a></li>
+        <li><a class="faicon-vk" href="#"><i class="fab fa-vk"></i></a></li>
+      </ul>
+    </div>
+    <div class="one_third">
+      <h6 class="heading">Site Links</h6>
+      <ul class="nospace linklist">
+        <li><a href="{{ url_for('index') }}">Home</a></li>
+        <li><a href="{{ url_for('about') }}">About</a></li>
+        <li><a href="{{ url_for('text') }}">Text Categorization</a></li>
+        <li><a href="{{ url_for('tag') }}">Hashtag Generation</a></li>
+        <li><a href="{{ url_for('contact') }}">Contact</a></li>
+      </ul>
+    </div>
+    <div class="one_third">
+      <h6 class="heading">Have a Question ?</h6>
+          <ul class="nospace linklist">
+                  <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+                  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info.Fledge.com</span></a></li>
+                </ul>
+    </div>
+    <!-- ################################################################################################ -->
+  </footer>
+</div>
+<!-- JAVASCRIPTS -->
+<script src="static/layout/scripts/jquery.min.js"></script>
+<script src="static/layout/scripts/jquery.backtotop.js"></script>
+<script src="static/layout/scripts/jquery.mobilemenu.js"></script>
+<!-- Homepage specific -->
+<script src="static/layout/scripts/jquery.easypiechart.min.js"></script>
+<script src="{{ url_for('static',filename='index.js') }}"></script>
+<!-- / Homepage specific -->
+{% endblock %}
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="top-content">
+        	
+  <div class="inner-bg">
+      <div class="container">
+          <div class="row">
+              <div class="col-sm-10 col-sm-offset-1 text">
+                  <h1><strong>Tweets</strong> Analysis</h1>
+                  <div class="description">
+                    <p>
+                      Search for your favorite topic in twitter, using <strong>Sentiment</strong> filter!
+                    </p>
+                  </div>
+              </div>
+          </div>
+
+
+
+
+          <div class="row">
+
+              <div class="col-sm-12  form-box">
+                <div class="form-top">
+                  <div class="form-top-left">
+                    <h3>What tweets you want to see!</h3>
+                      <p>Use the sentiment and factual filters below </p>
+                  </div>
+                  <div class="form-top-right">
+                    <i class="fa fa-twitter"></i>
+                  </div>
+                  </div>
+
+                  <div class="form-bottom">
+                <form role="form" id="form" class="login-form">
+                  <div class="form-group">
+                    <label class="sr-only" for="form-username">Username</label>
+                      <input type="text" name="tweet_search" placeholder="What do you want to search about.." class="form-username form-control" id="form-username">
+                    </div>
+
+                          <div class="row search_tweets">
+                                       <div class="col-sm-offset-3 col-sm-6">
+                                             <button id="search_btn" class="btn">Search Tweets</button>
+                                       </div>
+                              </div>
+
+                          <div class="row reset_filter">
+                                       <div class="col-sm-offset-3 col-sm-6">
+                                             <button data-toggle="tooltip" data-placement="top" title="Show all Tweets"  class="btn">Reset Filters</button>
+                                       </div>
+                              </div>
+
+
+                          <div class="row">
+                              <div class="col-sm-4 col-sm-offset-1">
+                                  <div class="row">
+                                       <div class="col-sm">
+                                            <button  data-toggle="tooltip" data-placement="left" title="Show only Positive Tweets" class="btn" id="psenti">Positive Tweets</button>
+                                       </div>
+                                       <div class="col-sm">
+                                              <button  data-toggle="tooltip" data-placement="left" title="Show only Negative Tweets"  class="btn" id="nsenti">Negative Tweets</button>
+                                       </div>
+                                  </div>
+                              </div>
+
+                              <div class="col-sm-4 col-sm-offset-2">
+                                  <div class="row">
+                                       <div class="col-sm">
+                                            <button data-toggle="tooltip" data-placement="left" title="Tweets which are Opinion"  id="opi" class="btn">Opinion Tweet</button>
+                                       </div>
+                                       <div class="col-sm">
+                                              <button  data-toggle="tooltip" data-placement="left" title="Factual Tweets"  id="fac" class="btn">Factual Tweet</button>
+                                       </div>
+                                  </div>
+                              </div>
+
+                          </div>
+
+
+
+
+
+
+
+                </form>
+              </div>
+              </div>
+
+          </div>
+
+          <div id="search_result">
+              <ol id="search_list">
+
+              </ol>
+          </div>
+      </div>
+  </div>
+  
+</div>
