--- a/templates/tag.html
+++ b/templates/tag.html
@@ -37,7 +37,81 @@ margin-right : auto;
 }
 
 
+.demo a {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  z-index: 2;
+  display: inline-block;
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  color: #fff;
+  font : normal 400 20px/1 'Josefin Sans', sans-serif;
+  letter-spacing: .1em;
+  text-decoration: none;
+  transition: opacity .3s;
+}
+.demo a:hover {
+  opacity: .5;
+}
 
+
+
+#section07 a {
+  padding-top: 80px;
+}
+#section07 a span {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 24px;
+  height: 24px;
+  margin-left: -12px;
+  border-left: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-animation: sdb07 2s infinite;
+  animation: sdb07 2s infinite;
+  opacity: 0;
+  box-sizing: border-box;
+}
+#section07 a span:nth-of-type(1) {
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
+}
+#section07 a span:nth-of-type(2) {
+  top: 16px;
+  -webkit-animation-delay: .15s;
+  animation-delay: .15s;
+}
+#section07 a span:nth-of-type(3) {
+  top: 32px;
+  -webkit-animation-delay: .3s;
+  animation-delay: .3s;
+}
+@-webkit-keyframes sdb07 {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes sdb07 {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 
 </style>
 </head>
@@ -52,6 +126,7 @@ margin-right : auto;
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
+<section id="section07" class="demo">
 <div class="bgded overlay" style="background-image:url('static/images/demo/backgrounds/hash1.jpg');">
   <div id="pageintro" class="hoc clear"> 
     <!-- ################################################################################################ -->
@@ -59,11 +134,12 @@ margin-right : auto;
       <h3 class="heading">Hashtag Generation</h3>
       <p>Hashtags are an indispensable unit of the social media platform and are immensely used for brand promotion and social media discussions. 
       </p>
-      
+      <a href="#ctdetails"><span></span><span></span><span></span>Scroll</a>
     </article>
     <!-- ################################################################################################ -->
   </div>
 </div>
+</section>
 
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
