--- a/templates/template.html
+++ b/templates/template.html
@@ -23,6 +23,8 @@
         <li><a href="{{ url_for('tag') }}">Hashtag Generation</a></li>
         <li><a href="{{ url_for('text') }}">Text Classification</a></li>
         <li><a href="{{ url_for('contact') }}">Contact</a></li>
+        <li><a href="{{ url_for('login') }}">Login</a></li>
+        <li><a href="{{ url_for('signup') }}">Signup</a></li>
       </ul>
       <!-- ################################################################################################ -->
     </nav>
