--- a/templates/signup.html
+++ b/templates/signup.html
@@ -214,20 +214,8 @@ input[type=password].form-control.invalid + label:after,
                         output = false;
                         $("#phone-error").html("Mobile Number is of 10 digits!");
                     }
-                   
-                    if (!($("#district").val())) {
-                        output = false;
-                        $("#district-error").html("Enter your District!");
-                    }
-
-                    if (!($("#pincode").val())) {
-                        output = false;
-                        $("#pincode-error").html("Pincode required!");
-                    }
-                    else if ( ($("#pincode").val().length) != 6) {
-                        output = false;
-                        $("#pincode-error").html("Pincode is of 6 digits!");
-                    }
+                
+                    
                 }
 
                 return output;
@@ -277,11 +265,22 @@ input[type=password].form-control.invalid + label:after,
             <table cellpadding="5">
                 <col width="30%">
                           <col width="70%">
+                
                 <tr>
                     <div id="personal-field">
                     <td><label for="username">Username  &nbsp  &nbsp
                     </label></td>  
                     <td><input type="text"  name="username" placeholder="Username"  id="username" class="demoInputBox" ><br>    
+                    <span id="name-error" class="signup-error"></span>
+                    <span id="name-error" class="signup-error"></span>
+                    </td>
+                    </div>
+                </tr>
+                <tr>
+                    <div id="personal-field">
+                    <td><label for="email">Email  &nbsp  &nbsp
+                    </label></td>  
+                    <td><input type="email"  name="email" placeholder="Email"  id="email" class="demoInputBox" ><br>    
                     <span id="name-error" class="signup-error"></span>
                     <span id="name-error" class="signup-error"></span>
                     </td>
@@ -318,7 +317,7 @@ input[type=password].form-control.invalid + label:after,
                 </tr>
                 <tr>
                     <td><label for="state">Country</label></td>
-                    <td><select name="state">                    
+                    <td><select name="country">                    
                         <option value="" selected disabled>Select Country</option>
                         <option>India</option>
                         <option>Pakistan</option>
@@ -328,7 +327,7 @@ input[type=password].form-control.invalid + label:after,
                 </tr>
             </table>
         <br>
-    <input class="btnAction" type="submit" name="submit" id="submit" value="Signup"> &nbsp &nbsp
+    <input class=btnAction type="submit" name="submit" id="submit" value="Signup"\> &nbsp &nbsp
     <a href="/login"> <b>Existing User? Login. </b></a>
     </form></center>
   </div>
