few more changes

--- a/templates/text.html
+++ b/templates/text.html
@@ -101,7 +101,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-{% extends "template.html" %}
+{% extends "tempi.html" %}
     {% block content %}
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
