--- a/templates/tag.html
+++ b/templates/tag.html
@@ -121,7 +121,7 @@ margin-right : auto;
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-{% extends "template.html" %}
+{% extends "tempi.html" %}
     {% block content %}
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
